
include(../../CMakeMacros.txt)


# printList("${projectDirs}")

# Add all subdirectories if wanted
# addAllSubdirectoriesAsProjects()

# Add only specific directories
#add_subdirectory(TIFS)
#add_subdirectory(Tetris)
#add_subdirectory(MORPG)
#add_subdirectory(SpaceShooter2D)
add_subdirectory(SideScroller)



